--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,9 @@ multidict==6.0.2
 python-dotenv==0.20.0
 typing_extensions==4.3.0
 yarl==1.7.2
+PyMySQL==1.0.2
+discord==2.1.0
+mysql-connector-python==8.0.32
+PyNaCl==1.5.0
+python-dotenv==0.21.1
+pywin32-ctypes==0.2.0
