--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,12 @@
-aiohttp==3.7.4.post0
-async-timeout==3.0.1
-attrs==21.4.0
-chardet==4.0.0
-discord.py==1.7.3
-idna==3.3
-multidict==6.0.2
-python-dotenv==0.20.0
-typing_extensions==4.3.0
-yarl==1.7.2
-
+aiohttp==3.8.4
+aiosignal==1.3.1
+async-timeout==4.0.2
+attrs==22.2.0
+charset-normalizer==3.0.1
+discord.py==2.1.1
+frozenlist==1.3.3
+idna==3.4
+multidict==6.0.4
+PyMySQL==1.0.2
+python-dotenv==1.0.0
+yarl==1.8.2
